--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-
-div {
+div.box1 {
     background-color: red;
     width: 500px;
     height: 300px;
-    
-    margin: 20px;
+    position: relative;
     margin: 50px 0px 0px 100px ;
 }
   
@@ -13,7 +11,6 @@ div {
     width: 150px;
     background-color: yellow;
     border-radius: 50%;
-    
-    margin-left: 40%;
-    margin: -210px 0px 0px 280px;
+    position: absolute;
+    margin: -230px 0px 0px 280px;
 }
